extends Node2D

@onready var hit = $AudioHit
@onready var charging = $ChargingSfx
@onready var exploring = $ExplorationMusic
@onready var fighting = $FightMusic

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
